bug fixes and new end-point for department history
